# convert_to_md

./: .gitignore  .pre-commit-config.yaml  README.md  dockerfile  pyproject.toml
scripts/: build_docker.sh  run_docker.sh
src/convert_to_md/: __init__.py  arxiv.py  main.py  models.py  pdf.py  util.py
